--- a/Shai-aval.html
+++ b/Shai-aval.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="Shai-aval.css">
-  <link rel="stylesheet" href="app.js">
+ 
   <title>My Website</title>
 </head>
 
@@ -243,7 +243,8 @@
     </div>
   </section>
   <!-- End Footer -->
-  <script src="modir.jpeg"></script>
+  <script src="app.js"></script>
+  <link rel="stylesheet" href="app.js">
 </body>
 
 </html>
